# oop_of_ret

./: .clang-format  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
03.09.2024/: CMakeLists.txt  task1.cpp  task2.cpp
04.09.2024/: CMakeLists.txt  example.cpp  task1.cpp  task10.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
13.11.2024/: CMakeLists.txt  MyComplex.h  cat.h  fraction.h  int8.h  main.cpp
15.10.2024/: CMakeLists.txt  README.md  lesson2.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
16.10.2024/: CMakeLists.txt  README.md  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
27.11.2024/: CMakeLists.txt  MyList.h  MyVector.h  MyVectorPtr.h  main.cpp
29.10.2024/: CMakeLists.txt  HeavyData.h  HeavyList.h  HeavyVector.h  HeavyVectorPtr.h  main.cpp
